--- a/Pitcher/Base.lproj/Main.storyboard
+++ b/Pitcher/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="166" y="394" width="69" height="20"/>
+                                    <rect key="frame" x="166" y="290" width="69" height="20"/>
                                 </variation>
                             </label>
                         </subviews>
@@ -142,6 +142,18 @@
                                     <action selector="slowPlay:" destination="5Y9-oP-gCb" eventType="touchUpInside" id="AV6-Z0-nNF"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="isw-EL-Xai">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="slow">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="259" y="114" width="100" height="100"/>
+                                </variation>
+                                <connections>
+                                    <action selector="slowPlay:" destination="5Y9-oP-gCb" eventType="touchUpInside" id="Hum-1C-min"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -155,6 +167,7 @@
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="oah-rA-20v"/>
+                                <exclude reference="isw-EL-Xai"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="8ou-Dj-Hgz"/>
@@ -168,6 +181,7 @@
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="oah-rA-20v"/>
+                                <include reference="isw-EL-Xai"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="8ou-Dj-Hgz"/>
